[package]
name = "moxie"
version = "0.1.0"
authors = ["James Hobin <hobinjk@gmail.com>"]
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nom = "^4.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
wasm-bindgen = { version = "0.2.43", features = ["serde-serialize"] }
zip = { version = "0.5.2", default-features = false, features = ["deflate"] }
